--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,43 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.madiyarzhenis.feedbox" >
+    package="com.example.madiyarzhenis.feedbox">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".SplashScreen"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".tabs.scanner_result.ScanQRCode"/>
-        <activity android:name=".tabs.scanner_result.ScanCodeResult"/>
-        <activity android:name=".tabs.scanner_result.add_comment.AddComment"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"/>
-        <activity android:name=".TabsActivity"/>
-        <activity android:name=".register.VerifyCode"/>
-        <activity android:name=".register.RegisterNameSurname"/>
-        <activity android:name=".register.RegisterActivity"/>
-        <activity android:name=".tabs.feedback.ShowFullFeedback"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"/>
+        <activity
+            android:name=".tabs.scanner_result.ScanQRCode"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".tabs.scanner_result.ScanCodeResult"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".tabs.scanner_result.add_comment.AddComment"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
+        <activity
+            android:name=".TabsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".register.VerifyCode"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".register.RegisterNameSurname"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".register.RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".tabs.feedback.ShowFullFeedback"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
+        <activity
+            android:name=".tabs.scanner_result.add_comment.place.PlaceSale"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
+        <activity
+            android:name=".tabs.scanner_result.add_comment.place.PlaceAdminstration"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
+        <activity
+            android:name=".tabs.scanner_result.add_comment.place.PlaceMenu"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
     </application>
 
 </manifest>
