--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "23.0.0"
 
     defaultConfig {
-        applicationId "kz.smf.almaty.feedbook"
-        minSdkVersion 15
+        applicationId "kz.smf.feedbook"
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -25,5 +25,5 @@ dependencies {
     compile 'me.dm7.barcodescanner:zxing:1.8.3'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile "com.google.android.gms:play-services:8.1.0"
+    compile "com.google.android.gms:play-services-gcm:8.1.0"
 }
