--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kz.smf.almaty.feedbook">
+    package="kz.smf.feedbook">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -14,13 +14,16 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <permission android:name="kz.smf.almaty.feedbook.permission.C2D_MESSAGE"
+    <permission
+        android:name="kz.smf.feedbook.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
-    <uses-permission android:name="kz.smf.almaty.feedbook.permission.C2D_MESSAGE" />
+    <uses-permission android:name="kz.smf.feedbook.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -28,7 +31,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="kz.smf.almaty.feedbook.SplashScreen"
+            android:name="kz.smf.feedbook.SplashScreen"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,59 +40,61 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="kz.smf.almaty.feedbook.tabs.scanner_result.ScanQRCode"
+            android:name="kz.smf.feedbook.tabs.scanner_result.ScanQRCode"
             android:screenOrientation="portrait" />
         <activity
-            android:name="kz.smf.almaty.feedbook.tabs.scanner_result.ScanCodeResult"
+            android:name="kz.smf.feedbook.tabs.scanner_result.ScanCodeResult"
             android:screenOrientation="portrait" />
         <activity
-            android:name="kz.smf.almaty.feedbook.tabs.scanner_result.add_comment.AddComment"
+            android:name="kz.smf.feedbook.tabs.scanner_result.add_comment.AddComment"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
         <activity
-            android:name="kz.smf.almaty.feedbook.TabsActivity"
+            android:name="kz.smf.feedbook.TabsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="kz.smf.almaty.feedbook.register.VerifyCode"
+            android:name="kz.smf.feedbook.register.VerifyCode"
             android:screenOrientation="portrait" />
         <activity
-            android:name="kz.smf.almaty.feedbook.register.RegisterNameSurname"
+            android:name="kz.smf.feedbook.register.RegisterNameSurname"
             android:screenOrientation="portrait" />
         <activity
-            android:name="kz.smf.almaty.feedbook.register.RegisterActivity"
+            android:name="kz.smf.feedbook.register.RegisterActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="kz.smf.almaty.feedbook.tabs.feedback.ShowFullFeedback"
+            android:name="kz.smf.feedbook.tabs.feedback.ShowFullFeedback"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
         <activity
-            android:name="kz.smf.almaty.feedbook.tabs.scanner_result.add_comment.place.PlaceSale"
+            android:name="kz.smf.feedbook.tabs.scanner_result.add_comment.place.PlaceSale"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
         <activity
-            android:name="kz.smf.almaty.feedbook.tabs.scanner_result.add_comment.place.PlaceAdminstration"
+            android:name="kz.smf.feedbook.tabs.scanner_result.add_comment.place.PlaceAdminstration"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
         <activity
-            android:name="kz.smf.almaty.feedbook.tabs.scanner_result.add_comment.place.PlaceMenu"
+            android:name="kz.smf.feedbook.tabs.scanner_result.add_comment.place.PlaceMenu"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
-        <activity android:name=".register.AccessPushNotification"
+        <activity
+            android:name="kz.smf.feedbook.register.AccessPushNotification"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"/>
-
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
 
         <receiver
             android:name=".GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND" >
+            android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="kz.smf.almaty.feedbook" />
+                <category android:name="kz.smf.feedbook" />
             </intent-filter>
         </receiver>
+
         <service android:name=".GcmMessageHandler" />
 
-        <meta-data android:name="com.google.android.gms.version"
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
     </application>
